--- a/package.json
+++ b/package.json
@@ -2,6 +2,13 @@
   "name": "sollerproject",
   "version": "0.1.0",
   "private": true,
+  "pnpm": {
+    "overrides": {
+      "react-is": "19.0.0-rc-a960b92c-20240819",
+      "react": "19.0.0-rc-a960b92c-20240819",
+      "react-dom": "19.0.0-rc-a960b92c-20240819"
+    }
+  },
   "scripts": {
     "dev": "next dev --turbo",
     "build": "next build",
@@ -9,18 +16,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "embla-carousel": "^8.3.0",
+    "embla-carousel-autoplay": "^8.3.0",
+    "embla-carousel-react": "^8.3.0",
+    "framer-motion": "12.0.0-alpha.0",
+    "lucide-react": "^0.453.0",
+    "next": "15.0.0",
     "react": "19.0.0-rc-65a56d0e-20241020",
     "react-dom": "19.0.0-rc-65a56d0e-20241020",
-    "next": "15.0.0"
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "15.0.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.0"
+    "typescript": "^5"
   }
 }
