--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint": "^8",
     "eslint-config-next": "15.0.0",
     "postcss": "^8",
+    "prettier": "^3.6.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
